[gd_scene load_steps=2 format=3 uid="uid://pausemenu456"]

[ext_resource type="Script" path="res://Scripts/UI/PauseMenu.gd" id="1_logic"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_logic")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MainContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 100.0
offset_right = 60.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Reprendre"

[node name="SettingsButton" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paramètres"

[node name="QuitButton" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quitter la partie"

[node name="SettingsContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "PARAMETRES"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LabelSens" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sensibilité Souris"
horizontal_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.001
max_value = 0.02
step = 0.001
value = 0.003

[node name="SensitivityValue" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "0.003"
horizontal_alignment = 1

[node name="LabelVolume" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume Global"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="VolumeValue" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retour"
